@@ -13,6 +13,8 @@ For a complete change history, please see the CVS log comments.
 CHANGES - Current Version:
 --------------------------
 
+- Fixed initialization of MBR of TABCollection members (bug 1520)
+
 - Added mapping for datum name "North_American_Datum_1927". 
 
 - Fixed problem with uninitialized affine parameters written to .MAP header, 
@@ -727,5 +729,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.164 2006-07-10 17:58:48 fwarmerdam Exp $
+$Id: HISTORY.TXT,v 1.165 2006-07-25 13:22:58 dmorissette Exp $
 ------------
